fixed column wrapping

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -32,3 +32,10 @@ body {
     @apply class stuff;
   }
 } */
+
+
+.nosplit {
+  -webkit-column-break-inside: avoid;
+  page-break-inside: avoid;
+  break-inside: avoid;
+}
